feat: 完成渐进阅读配额与上限并归档规格

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -84,12 +84,17 @@ calculateNextDue(priority, baseDate)
 
 ## 收集与队列
 
-收集器只返回 `cardType` 为 `渐进阅读` 或 `extracts` 的块，并且满足以下条件之一：
+收集器只返回 `cardType` 为 `topic` 或 `extracts` 的块，并且满足以下条件：
 
-- `ir.lastRead` 为空（新卡）
-- `ir.due <= now`（到期卡）
+- `ir.due` 在今天（含）之前（按天边界判断）
 
-队列构建采用 2:1 混合策略（到期卡:新卡），并按优先级与类型排序。
+队列构建规则：
+
+- Topic 依据 `ir.position` 排序（越小越靠前）
+- Extracts 依据 `due`（越早越靠前）+ 优先级排序
+- 按 Topic 配额比例混合队列（默认 20%）
+- 启用每日上限时，只推送上限内的卡片
+- 超额时可自动后移（把超出的内容顺延到后续排期）
 
 ## UI 组件
 
