feat: Update incremental reading module documentation for clarity and consistency in operations

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -2,7 +2,7 @@
 
 ## 功能概述
 
-渐进阅读模块用于管理 Topic（主题）与 Extract（摘录）两类块的阅读节奏，提供独立于 SRS 复习的阅读面板与调度逻辑。支持优先级调度、原生编辑器、面包屑导航与完整操作（标记已读、跳过、调整优先级、生成卡片、删除）。
+渐进阅读模块用于管理 Topic（主题）与 Extract（摘录）两类块的阅读节奏，提供独立于 SRS 复习的阅读面板与调度逻辑。支持优先级调度、原生编辑器、面包屑导航与完整操作（已读、靠前/靠后、跳过、读完、删除）。
 
 ## 自动标签开关
 
@@ -22,12 +22,14 @@
 - `ir.lastRead`：上次阅读时间（Date 或 null）
 - `ir.readCount`：累计阅读次数
 - `ir.due`：下次到期时间（Date）
+- `ir.position`：Topic 队列位置（数值越小越靠前）
 
 标签属性补充：
 
 - `#card.priority`：单选优先级（高优先级/中优先级/低优先级）
   - Topic 创建时默认“中优先级”
   - Extract 自动标记时继承父 Topic 的 priority
+  - Extract 在“靠前/靠后”操作中仅更新该字段
 
 类型定义：
 
@@ -37,6 +39,7 @@ export type IRState = {
   lastRead: Date | null
   readCount: number
   due: Date
+  position: number | null
 }
 ```
 
@@ -44,13 +47,13 @@ export type IRState = {
 
 优先级调度分为两层：
 
-1) `#card.priority`（高/中/低）用于 Extract 初始排期，区间随机化，避免同日堆积：
+1) `#card.priority`（高/中/低）用于 Extract 的排期，区间随机化，避免同日堆积：
 
 - 高优先级 → 1-2 天
 - 中优先级 → 3-5 天
 - 低优先级 → 7-10 天
 
-2) `ir.priority`（1-10）仍保留为内部优先级，固定映射如下：
+2) `ir.priority`（1-10）用于 Topic 的排期，固定映射如下：
 
 - 10 → 1 天
 - 8-9 → 2 天
@@ -64,6 +67,14 @@ export type IRState = {
 getIntervalDays(priority)
 calculateNextDue(priority, baseDate)
 ```
+
+## 交互语义
+
+- 已读：按当前优先级重算 `ir.due`，并移出当日队列
+- 靠前/靠后：等同“已读 + 优先级上/下调一档”
+  - Topic：调整 `ir.priority`（低/中/高对应 2/5/9）
+  - Extract：仅调整 `#card.priority`（高/中/低）
+- 读完：移除 `#card` 标签并清空 SRS/IR 状态（`srs.*` + `ir.*`）
 
 ## API 参考
 
@@ -79,8 +90,17 @@ calculateNextDue(priority, baseDate)
 ### `markAsRead(blockId)`
 标记已读，更新 `ir.lastRead`、`ir.readCount` 与 `ir.due`。
 
+### `markAsReadWithPriority(blockId, newPriority)`
+标记已读并更新 `ir.priority`，基于当前时间重算 `ir.due`。
+
 ### `updatePriority(blockId, newPriority)`
 更新优先级并立即重算 `ir.due`（基于当前时间）。
+
+### `deleteIRState(blockId)`
+删除所有 `ir.*` 属性。
+
+### `completeIRCard(blockId)`
+移除 `#card` 标签并清理 SRS/IR 状态（用于“读完”）。
 
 ## 收集与队列
 
@@ -106,8 +126,8 @@ calculateNextDue(priority, baseDate)
 
 - 原生块编辑器（`orca.components.Block`）
 - 面包屑导航
-- 操作区（标记已读、跳过、生成卡片、删除）
-- 优先级滑块（实时更新）
+- 操作区（已读、靠前/靠后、跳过、读完、删除）
+- Topic 额外操作：优先级切换（仅影响 `ir.priority`）
 
 ### `IncrementalReadingBreadcrumb`
 向上查找最近的 Topic，显示格式：
@@ -167,7 +187,7 @@ Topic Title > Extract Title
 1. 创建 Topic 块并标记 `#card`，`type=topic`
 2. 在 Topic 下创建子块，自动标记为 `extracts`
 3. 通过“渐进阅读”入口打开阅读面板
-4. 在面板中阅读、编辑、标记已读或生成卡片
+4. 在面板中阅读、编辑、已读/靠前/靠后/读完
 
 ## 关键文件
 
