feat: 支持 ir_record 记录渐进阅读进度并自动跳转

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -75,6 +75,7 @@ calculateNextDue(priority, baseDate)
   - Topic：调整 `ir.priority`（低/中/高对应 2/5/9）
   - Extract：仅调整 `#card.priority`（高/中/低）
 - 读完：移除 `#card` 标签并清空 SRS/IR 状态（`srs.*` + `ir.*`）
+- `ir_record`（斜杠命令）：记录当前阅读进度（`ir.resumeBlockId`），下次该卡片进入阅读面板时自动跳转继续阅读
 
 ## API 参考
 
@@ -95,6 +96,9 @@ calculateNextDue(priority, baseDate)
 
 ### `updatePriority(blockId, newPriority)`
 更新优先级并立即重算 `ir.due`（基于当前时间）。
+
+### `updateResumeBlockId(blockId, resumeBlockId)`
+仅更新阅读进度（`ir.resumeBlockId`），不改变其它状态。
 
 ### `deleteIRState(blockId)`
 删除所有 `ir.*` 属性。
