feat(ir): 调度升级、推后与Book IR分散到期兼容

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -2,17 +2,17 @@
 
 ## 功能概述
 
-渐进阅读模块用于管理 Topic（主题）与 Extract（摘录）两类块的阅读节奏，提供独立于 SRS 复习的阅读面板与调度逻辑。支持优先级调度、原生编辑器、面包屑导航与完整操作（已读、靠前/靠后、跳过、读完、删除）。
+渐进阅读模块用于管理 Topic（主题）与 Extract（摘录）两类块的阅读节奏，提供独立于 SRS 复习的阅读面板与调度逻辑。支持优先级调度、原生编辑器、面包屑导航与完整操作（已读、靠前/靠后、推后、读完、删除）。
 
 ## 自动标签开关
 
-自动标签功能用于在 Topic 下创建子块时，自动补齐 `#card` 标签并设置 `type=extracts`。默认启用，可在命令面板中手动切换：
+自动标签功能用于在 Topic 下创建子块时，自动补齐 `#card` 标签并设置 `type=extracts`。当前默认关闭，可在命令面板中手动切换：
 
 - 命令：`SRS: 切换渐进阅读自动标签`
 - 启用时：新建子块会自动打标签并初始化 Extract
 - 关闭时：新建子块不做自动标记
 
-默认启用，现有用户无感知。
+说明：默认值由插件设置项 `enableAutoExtractMark` 控制。
 
 ## 数据模型
 
@@ -22,7 +22,12 @@
 - `ir.lastRead`：上次阅读时间（Date 或 null）
 - `ir.readCount`：累计阅读次数
 - `ir.due`：下次到期时间（Date）
+- `ir.intervalDays`：当前间隔（天，可为小数），用于计算下一次 `ir.due`
+- `ir.postponeCount`：累计推后次数（手动推后 + 超额自动后移）
+- `ir.stage`：漏斗阶段（如 `topic.preview` / `extract.raw`）
+- `ir.lastAction`：最近一次动作（如 `read` / `postpone` / `autoPostpone` / `priority`）
 - `ir.position`：Topic 队列位置（数值越小越靠前）
+- `ir.resumeBlockId`：继续阅读进度（下次打开卡片时自动跳转到该 blockId）
 
 标签属性补充：
 
@@ -39,13 +44,18 @@ export type IRState = {
   lastRead: Date | null
   readCount: number
   due: Date
+  intervalDays: number
+  postponeCount: number
+  stage: string
+  lastAction: string
   position: number | null
+  resumeBlockId: number | null
 }
 ```
 
 ## 调度算法
 
-优先级调度分为两层：
+优先级调度分为两层，并引入“间隔增长”以避免材料长期高频出现：
 
 1) `#card.priority`（高/中/低）用于 Extract 的排期，区间随机化，避免同日堆积：
 
@@ -65,7 +75,9 @@ export type IRState = {
 
 ```ts
 getIntervalDays(priority)
-calculateNextDue(priority, baseDate)
+// 新增：基于 intervalDays 的到期计算与增长
+// - 已读：intervalDays *= growthFactor，再算 due
+// - 改优先级：intervalDays 重置为“基础间隔”，并立刻重算 due
 ```
 
 ## 交互语义
@@ -74,6 +86,7 @@ calculateNextDue(priority, baseDate)
 - 靠前/靠后：等同“已读 + 优先级上/下调一档”
   - Topic：调整 `ir.priority`（低/中/高对应 2/5/9）
   - Extract：仅调整 `#card.priority`（高/中/低）
+- 推后：把当前卡片推迟到未来几天（按优先级档位自动选择天数），并写回 `ir.due/ir.intervalDays/ir.postponeCount/ir.lastAction`
 - 读完：移除 `#card` 标签并清空 SRS/IR 状态（`srs.*` + `ir.*`）
 - `ir_record`（斜杠命令）：记录当前阅读进度（`ir.resumeBlockId`），下次该卡片进入阅读面板时自动跳转继续阅读
 
@@ -99,6 +112,9 @@ calculateNextDue(priority, baseDate)
 
 ### `updateResumeBlockId(blockId, resumeBlockId)`
 仅更新阅读进度（`ir.resumeBlockId`），不改变其它状态。
+
+### `postpone(blockId)`
+推后当前卡片：按优先级档位自动推迟到未来几天，并更新 `ir.due/ir.intervalDays/ir.postponeCount/ir.lastAction`。
 
 ### `deleteIRState(blockId)`
 删除所有 `ir.*` 属性。
