feat(ir): 优先级改为0-100并同步到#card

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -18,7 +18,7 @@
 
 渐进阅读状态存储在 Block Properties 中，字段如下：
 
-- `ir.priority`：优先级，1-10（默认 5）
+- `ir.priority`：优先级，0-100（默认 50，数值越大越优先）
 - `ir.lastRead`：上次阅读时间（Date 或 null）
 - `ir.readCount`：累计阅读次数
 - `ir.due`：下次到期时间（Date）
@@ -31,10 +31,10 @@
 
 标签属性补充：
 
-- `#card.priority`：单选优先级（高优先级/中优先级/低优先级）
-  - Topic 创建时默认“中优先级”
-  - Extract 自动标记时继承父 Topic 的 priority
-  - Extract 在“靠前/靠后”操作中仅更新该字段
+- `#card.priority`：数字优先级（Number）
+  - 仅用于 Orca 的标签属性面板展示/筛选
+  - 插件会在写入 `ir.priority` 后主动同步该值到 `#card.priority`
+  - 调度/选卡逻辑只使用 `ir.priority`，不会读取 `#card.priority`
 
 类型定义：
 
@@ -55,38 +55,33 @@ export type IRState = {
 
 ## 调度算法
 
-优先级调度分为两层，并引入“间隔增长”以避免材料长期高频出现：
+优先级调度采用单一真相：**只使用 `ir.priority(0-100)`**，并引入“间隔增长”避免材料长期高频出现。
 
-1) `#card.priority`（高/中/低）用于 Extract 的排期，区间随机化，避免同日堆积：
+### 1) 基础间隔（base interval）
 
-- 高优先级 → 1-2 天
-- 中优先级 → 3-5 天
-- 低优先级 → 7-10 天
+- Topic：优先级越高越频繁（约 `14d → 2d`）
+- Extract：优先级越高越频繁（约 `7d → 1d`）
 
-2) `ir.priority`（1-10）用于 Topic 的排期，固定映射如下：
+实现位于：`src/srs/incrementalReadingScheduler.ts`
 
-- 10 → 1 天
-- 8-9 → 2 天
-- 6-7 → 3 天
-- 4-5 → 5 天
-- 1-3 → 7 天
+### 2) 到期时间（due）
 
-核心函数：
+- `calculateNextDue(cardType, priority, baseDate)` 会在基础间隔上加入 0–12h 抖动，减少同日堆积。
 
-```ts
-getIntervalDays(priority)
-// 新增：基于 intervalDays 的到期计算与增长
-// - 已读：intervalDays *= growthFactor，再算 due
-// - 改优先级：intervalDays 重置为“基础间隔”，并立刻重算 due
-```
+### 3) 已读后的间隔增长（intervalDays growth）
+
+- Topic：`intervalDays *= 1.25`（上限 60 天）
+- Extract：`intervalDays *= 1.35`（上限 30 天）
+
+注意：调整优先级（`updatePriority / markAsReadWithPriority`）会把 `intervalDays` 重置为新的基础间隔，并立刻重算 `due`（基于当前时间）。
 
 ## 交互语义
 
 - 已读：按当前优先级重算 `ir.due`，并移出当日队列
 - 靠前/靠后：等同“已读 + 优先级上/下调一档”
-  - Topic：调整 `ir.priority`（低/中/高对应 2/5/9）
-  - Extract：仅调整 `#card.priority`（高/中/低）
-- 推后：把当前卡片推迟到未来几天（按优先级档位自动选择天数），并写回 `ir.due/ir.intervalDays/ir.postponeCount/ir.lastAction`
+  - Topic/Extract 均调整 `ir.priority`（默认步长 ±10，范围 0-100）
+- 优先级切换（Topic 专用）：快速在 20 / 50 / 80 间循环，便于粗粒度调整
+- 推后：把当前卡片推迟到未来几天（由 `ir.priority` 与 cardType 决定随机区间），并写回 `ir.due/ir.intervalDays/ir.postponeCount/ir.lastAction`
 - 读完：移除 `#card` 标签并清空 SRS/IR 状态（`srs.*` + `ir.*`）
 - `ir_record`（斜杠命令）：记录当前阅读进度（`ir.resumeBlockId`），下次该卡片进入阅读面板时自动跳转继续阅读
 
@@ -130,11 +125,12 @@ getIntervalDays(priority)
 
 队列构建规则：
 
-- Topic 依据 `ir.position` 排序（越小越靠前）
-- Extracts 依据 `due`（越早越靠前）+ 优先级排序
-- 按 Topic 配额比例混合队列（默认 20%）
-- 启用每日上限时，只推送上限内的卡片
-- 超额时可自动后移（把超出的内容顺延到后续排期）
+- Topic：按 `priority` 降序，其次 `due`，再按 `position`
+- Extract：按 `due` 升序，其次 `priority` 降序
+- `topicQuotaPercent`：Topic 的目标占比（默认 20%）
+- `dailyLimit`：每日推送上限；启用后会对候选集合截断
+- 逾期 Extract 优先：在 `dailyLimit` 模式下，会先把“已逾期”的 Extract 放到队列最前面，再按配额填充剩余槽位
+- `enableAutoDefer`：超额自动后移；把未入选的卡按优先级推后（并更新 `postponeCount/lastAction/due`）
 
 ## UI 组件
 
@@ -194,13 +190,13 @@ Topic Title > Extract Title
 ### 批量操作
 
 - 支持多选卡片
-- 批量调整优先级（1-10）
+- 批量调整优先级（0-100）
 - 操作完成后自动刷新列表
 - 部分失败会提示数量与详情入口
 
 ### 迁移说明
 
-无迁移，直接替换；默认启用，现有用户无感知。
+当前实现以 `ir.priority(0-100)` 为单一真相；不再使用“高/中/低”三档优先级。
 
 ## 使用流程
 
