--- a/模块文档/渐进阅读_优化路线.md
+++ b/模块文档/渐进阅读_优化路线.md
@@ -1,6 +1,7 @@
 # 渐进阅读（Incremental Reading）优化路线（可执行方案）
 
-> 目标：把当前插件的 Topic/Extract 机制升级为更贴近 SuperMemo 的“漏斗式提纯”工作流：**Topic → Extract → Item（Cloze/Q&A）**，并让调度真正服务于“在有限时间内优先处理高价值信息”，而不是反复机械刷同一篇材料。
+> 目标：把当前插件的 Topic/Extract 机制升级为更贴近 SuperMemo 的“漏斗式提纯”工作流：**Topic → Extract → Item（Cloze/Q&A）**，并让调度真正服务于“在有限时间内优先处理高价值信息”。  
+> 备注：本文已按当前实现同步（`ir.priority` 为 0-100 单一真相；`#card.priority` 为 Number 镜像字段，仅用于展示/筛选）。
 
 ## 0. 背景：当前实现（与代码对应）
 
@@ -15,25 +16,26 @@
 
 实现位于 `src/srs/incrementalReadingStorage.ts`，现有字段：
 
-- `ir.priority`: number（1-10）
+- `ir.priority`: number（0-100，数值越高越优先；唯一真相）
 - `ir.lastRead`: Date | null
 - `ir.readCount`: number
 - `ir.due`: Date
-- `ir.position`: number | null（Topic 队列位置）
+- `ir.intervalDays`: number（当前间隔天数，用于下次 due）
+- `ir.postponeCount`: number（累计推后次数：手动推后 + 自动后移）
+- `ir.stage`: string（漏斗阶段）
+- `ir.lastAction`: string（最近一次动作）
+- `ir.position`: number | null（Topic 队列位置，辅助顺序）
 - `ir.resumeBlockId`: DbId | null（ir_record 记录进度，`src/srs/registry/commands.ts`）
 
 ### 0.3 调度与队列（今天该推送谁）
 
 - 到期判定按“自然日 00:00”边界：`src/srs/incrementalReadingCollector.ts#collectIRCardsFromBlocks`
-- Topic 下一次到期：`ir.priority(1-10)` → 固定间隔（`src/srs/incrementalReadingScheduler.ts`）
-- Extract 下一次到期：优先使用 `#card.priority(高/中/低)` 的随机区间（同上；由 `incrementalReadingStorage.ts#computeNextDue` 在 `cardType==="extracts"` 时生效）
+- 下一次到期：由 `ir.priority(0-100)` + cardType 计算基础间隔，并加入少量抖动（`src/srs/incrementalReadingScheduler.ts`）
 - 队列构建：`buildIRQueue`（`src/srs/incrementalReadingCollector.ts`）
-  - Topic：按 `ir.position` 升序
-  - Extract：按 `due` 升序，再按 `state.priority`（注意：不是 `#card.priority`）
-  - 交错混排：`topicQuotaPercent` + `dailyLimit`
-  - 超额自动后移：`deferOverflowCards`
-    - Extract：直接把 `ir.due` 推到“明天 00:00”
-    - Topic：只把 `ir.position` 移到队尾
+  - Topic：按 `priority` 降序，其次 `due`，再按 `position`
+  - Extract：按 `due` 升序，其次 `priority` 降序
+  - `dailyLimit` 场景下：逾期 Extract 优先（先入队），其余再按 `topicQuotaPercent` 混排
+  - 超额自动后移：`deferOverflowCards`（按优先级推后，并写回 `due/intervalDays/postponeCount/lastAction`）
 
 ### 0.4 会话动作（你对卡做了什么）
 
@@ -41,9 +43,7 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 动作实现：`src/srs/incrementalReadingStorage.ts` + `src/srs/irSessionActions.ts`
 
 - 已读：更新 `lastRead/readCount/due`（`markAsRead`）
-- 靠前/靠后：
-  - Topic：调整 `ir.priority`（并已读）
-  - Extract：调整 `#card.priority`（并已读）
+- 靠前/靠后：Topic/Extract 统一调整 `ir.priority`（默认步长 ±10，并已读）
 - 读完：移除 `#card` 并清理 `srs.*` + `ir.*`（`completeIRCard`）
 - 跳过：仅从本次队列移除（不写回状态）
 
@@ -87,11 +87,7 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 
 ### 2.2 Extract 的优先级在队列排序里可能失真
 
-现状：
-- Extract 的下一次 due 用的是 `#card.priority`（高/中/低）随机区间。
-- 但队列排序用的是 `IRCard.priority = ir.priority`（常见为默认 5），不等同于 `#card.priority`。
-
-后果：同日多个 Extract 的先后顺序可能不符合你对“高/中/低”的预期。
+已解决：Extract 的调度/排序统一使用 `ir.priority`；`#card.priority` 仅作为镜像字段展示，不参与逻辑。
 
 ### 2.3 “跳过”不写回状态，容易违反 One-action 原则
 
@@ -217,7 +213,8 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 
 - [x] 修正文档与实现不一致：`enableAutoExtractMark` 默认值/说明（已核对：当前默认关闭，文档与实现一致）
 - [x] 把“跳过”改为“推后（Postpone）”，并写回 `ir.due`（`src/components/IncrementalReadingSessionDemo.tsx` + `src/srs/incrementalReadingStorage.ts` 新增 `postpone` API）
-- [x] 修正 Extract 的“有效优先级”用于排序（`src/srs/incrementalReadingCollector.ts`）
+- [x] 统一优先级为 `ir.priority(0-100)` 单一真相，并同步到 `#card.priority(Number)`（展示/筛选用）
+- [x] 逾期 Extract 优先进入 dailyLimit 队列，避免被 Topic 配额稀释
 - [x] 自动后移仅推迟低优先级优先（`src/srs/incrementalReadingCollector.ts#deferOverflowCards` + `buildIRQueue` 选取逻辑）
 
 ### P1（让调度开始“学习”，解决 Topic 高频问题）
@@ -238,14 +235,15 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 
 ### 5.1 优先级档（人类可理解）
 
-- 高优先级：今天/明天必须推进（重要且紧急）
-- 中优先级：本周内推进（重要但不急）
-- 低优先级：有空再看（可无限期推迟）
+建议仅作为心智模型（非代码分桶）：
+
+- 80–100：高优先级（今天/明天必须推进）
+- 40–79：中优先级（本周内推进）
+- 0–39：低优先级（有空再看，可长期推后）
 
 ### 5.2 初始 intervalDays
 
-- Topic：0 或 1
-- Extract：1（高）/ 2（中）/ 3（低）
+由 `ir.priority` 与 cardType 计算基础间隔（见 `src/srs/incrementalReadingScheduler.ts`）
 
 ### 5.3 已读后的 interval 增长
 
@@ -255,9 +253,10 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 
 ### 5.4 推后（Postpone）天数
 
-- 高：1–2 天
-- 中：3–5 天
-- 低：7–14 天
+由 `ir.priority` 与 cardType 共同决定随机区间：
+
+- Topic：约 1–14 天（优先级越低越长）
+- Extract：约 1–10 天（优先级越低越长）
 
 ### 5.5 超额自动后移策略（dailyLimit 触发）
 
@@ -310,8 +309,7 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
   - `markAsRead` 改为基于 `intervalDays` 计算 `due`（P1）
 
 - 队列与自动后移：`src/srs/incrementalReadingCollector.ts`
-  - Extract 排序改用 `#card.priority` 的有效优先级（P0）
-  - `deferOverflowCards` 改为优先推迟低优先级，并写 `due`（P0/P1）
+  - `deferOverflowCards`：按 `ir.priority` 推后，并写回 `due/intervalDays/postponeCount`
 
 - 会话 UI：`src/components/IncrementalReadingSessionDemo.tsx`
   - “跳过”→“推后”（P0）
