feat(ir): add settings for incremental reading management and improve UI components

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -12,7 +12,7 @@
 - 启用时：新建子块会自动打标签并初始化 Extract
 - 关闭时：新建子块不做自动标记
 
-说明：默认值由插件设置项 `enableAutoExtractMark` 控制。
+说明：默认值由插件设置项 `enableAutoExtractMark` 控制；也可以在「渐进阅读管理面板」顶部的「队列设置」中直接修改（与插件 Settings 面板同步）。
 
 ## 数据模型
 
@@ -131,6 +131,8 @@ export type IRState = {
 - `dailyLimit`：每日推送上限；启用后会对候选集合截断
 - 逾期 Extract 优先：在 `dailyLimit` 模式下，会先把“已逾期”的 Extract 放到队列最前面，再按配额填充剩余槽位
 - `enableAutoDefer`：超额自动后移；把未入选的卡按优先级推后（并更新 `postponeCount/lastAction/due`）
+
+提示：以上 3 个队列相关设置（`topicQuotaPercent` / `dailyLimit` / `enableAutoDefer`）可在「渐进阅读管理面板」的「队列设置」中快速配置。
 
 ## UI 组件
 
