fix: 渐进阅读打开只展示，溢出推后改为按钮触发

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -23,7 +23,7 @@
 - `ir.readCount`：累计阅读次数
 - `ir.due`：下次到期时间（Date）
 - `ir.intervalDays`：当前间隔（天，可为小数），用于计算下一次 `ir.due`
-- `ir.postponeCount`：累计推后次数（手动推后 + 超额自动后移）
+- `ir.postponeCount`：累计推后次数（手动推后 + 溢出推后）
 - `ir.stage`：漏斗阶段（如 `topic.preview` / `extract.raw`）
 - `ir.lastAction`：最近一次动作（如 `read` / `postpone` / `autoPostpone` / `priority`）
 - `ir.position`：Topic 队列位置（数值越小越靠前）
@@ -130,7 +130,7 @@ export type IRState = {
 - `topicQuotaPercent`：Topic 的目标占比（默认 20%）
 - `dailyLimit`：每日推送上限；启用后会对候选集合截断
 - 逾期 Extract 优先：在 `dailyLimit` 模式下，会先把“已逾期”的 Extract 放到队列最前面，再按配额填充剩余槽位
-- `enableAutoDefer`：超额自动后移；把未入选的卡按优先级推后（并更新 `postponeCount/lastAction/due`）
+- `enableAutoDefer`：启用溢出推后按钮；当到期卡超过每日上限时，允许“一键把溢出推后”（打开面板只展示，不会自动改排期）
 
 提示：以上 3 个队列相关设置（`topicQuotaPercent` / `dailyLimit` / `enableAutoDefer`）可在「渐进阅读管理面板」的「队列设置」中快速配置。
 
