--- a/模块文档/渐进阅读_优化路线.md
+++ b/模块文档/渐进阅读_优化路线.md
@@ -21,7 +21,7 @@
 - `ir.readCount`: number
 - `ir.due`: Date
 - `ir.intervalDays`: number（当前间隔天数，用于下次 due）
-- `ir.postponeCount`: number（累计推后次数：手动推后 + 自动后移）
+- `ir.postponeCount`: number（累计推后次数：手动推后 + 溢出推后）
 - `ir.stage`: string（漏斗阶段）
 - `ir.lastAction`: string（最近一次动作）
 - `ir.position`: number | null（Topic 队列位置，辅助顺序）
@@ -35,7 +35,7 @@
   - Topic：按 `priority` 降序，其次 `due`，再按 `position`
   - Extract：按 `due` 升序，其次 `priority` 降序
   - `dailyLimit` 场景下：逾期 Extract 优先（先入队），其余再按 `topicQuotaPercent` 混排
-  - 超额自动后移：`deferOverflowCards`（按优先级推后，并写回 `due/intervalDays/postponeCount/lastAction`）
+  - 溢出推后（按钮触发）：`deferIROverflow` → `deferOverflowCards`（按优先级推后，并写回 `due/intervalDays/postponeCount/lastAction`；打开面板只展示，不自动改排期）
 
 ### 0.4 会话动作（你对卡做了什么）
 
@@ -94,10 +94,10 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 现状：跳过只是临时移出本次队列，不影响 `due/priority/position`。  
 后果：用户可以无限跳过，形成“看过但没处理”的隐性积压，调度无法学习。
 
-### 2.4 自动后移（Auto-postpone）不区分优先级，且 Topic 只改 position
+### 2.4 溢出推后（Auto-postpone）相关的问题与修正
 
-现状：超额时全部溢出卡都被后移；Extract 只推到明天；Topic 只调 position。  
-建议方向：Auto-postpone 应该“优先推迟低优先级”，并把推迟体现为更合理的 `due`（不仅仅明天）。
+现状（已修正）：溢出推后改为“明确按钮触发”，打开面板只展示，不会在查看时自动改排期。  
+建议方向：溢出推后应“优先推迟低优先级”，并把推迟体现为更合理的 `due`（不仅仅明天）。
 
 ## 3. 优化设计：把“漏斗原则”映射到当前插件结构
 
@@ -112,7 +112,7 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 - 目标：让 Topic/Extract 的间隔随推进而增长（对应 SuperMemo 的 A-Factor 思路）
 
 2) `ir.postponeCount: number`
-- 含义：累计被推后次数（手动推后 + 自动后移）
+- 含义：累计被推后次数（手动推后 + 溢出推后）
 - 用途：做“自动老化/降权”、以及 backlog 的诊断
 
 3) `ir.stage: "topic.preview" | "topic.work" | "extract.raw" | "extract.refined" | "extract.item_candidate"`
@@ -215,13 +215,13 @@ UI：`src/components/IncrementalReadingSessionDemo.tsx`
 - [x] 把“跳过”改为“推后（Postpone）”，并写回 `ir.due`（`src/components/IncrementalReadingSessionDemo.tsx` + `src/srs/incrementalReadingStorage.ts` 新增 `postpone` API）
 - [x] 统一优先级为 `ir.priority(0-100)` 单一真相，并同步到 `#card.priority(Number)`（展示/筛选用）
 - [x] 逾期 Extract 优先进入 dailyLimit 队列，避免被 Topic 配额稀释
-- [x] 自动后移仅推迟低优先级优先（`src/srs/incrementalReadingCollector.ts#deferOverflowCards` + `buildIRQueue` 选取逻辑）
+- [x] 溢出推后仅推迟低优先级优先（`src/srs/incrementalReadingCollector.ts#deferIROverflow` + `deferOverflowCards`）
 
 ### P1（让调度开始“学习”，解决 Topic 高频问题）
 
 - [x] 引入 `ir.intervalDays` 并在 `markAsRead/markAsReadWithPriority/updatePriority` 中使用（`src/srs/incrementalReadingStorage.ts`）
 - [x] Topic/Extract 的间隔按 readCount 逐步增长（轻量 A-Factor）
-- [x] 自动后移不再固定“明天 00:00”，而是按优先级推迟到未来几天
+- [x] 溢出推后不再固定“明天 00:00”，而是按优先级推迟到未来几天
 
 ### P2（完成漏斗：Extract → Item 的闭环）
 
