feat(ir): add 'advance learn' feature to move cards due date to today and enhance session focus handling

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -189,6 +189,10 @@ Topic Title > Extract Title
 - 点击卡片标题始终在侧面板打开对应块，主面板不变
 - 支持在主面板继续工作，同时在侧面板查看与编辑卡片
 
+### 单卡操作
+
+- 在“明天 / 未来7天 / 新卡 / 7天后”分组的卡片右侧提供「提前学」按钮：将该卡 `ir.due` 提前到今天，并打开「渐进阅读会话面板」优先展示该卡（即使开启每日上限也保证进队列）
+
 ### 批量操作
 
 - 支持多选卡片
