feat(ir): enhance IncrementalReadingBreadcrumb to display current page and improve breadcrumb item handling

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -148,13 +148,17 @@ export type IRState = {
 - Topic 额外操作：优先级切换（仅影响 `ir.priority`）
 
 ### `IncrementalReadingBreadcrumb`
-向上查找最近的 Topic，显示格式：
+向上查找所在页面（根块）并显示当前位置，显示格式：
 
 ```
-Topic Title > Extract Title
+Page Title > Block Preview
 ```
 
 点击可跳转到对应块，Shift+点击在侧面板打开。
+
+补充：
+- Extract 卡：第二段显示 extract 的父块（father block）预览（会截断），避免顶部被摘录上下文的长文本撑满。
+- Topic 卡：第二段显示 Topic 本身；如果 Topic 就是页面根块，则只显示一段。
 
 ## 管理面板
 
