feat(ir): enhance IncrementalReadingBreadcrumb and IncrementalReadingSessionDemo to support cardType and improve session handling

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -144,7 +144,7 @@ export type IRState = {
 
 - 原生块编辑器（`orca.components.Block`）
 - 面包屑导航
-- 操作区（已读、靠前/靠后、跳过、读完、删除）
+- 操作区（已读、靠前/靠后、推后、读完、删除；Extract 额外支持「制卡」）
 - Topic 额外操作：优先级切换（仅影响 `ir.priority`）
 
 ### `IncrementalReadingBreadcrumb`
