feat(ir): implement dispersal logic for interval days and due dates to reduce lumpiness in scheduling

--- a/模块文档/渐进阅读.md
+++ b/模块文档/渐进阅读.md
@@ -57,6 +57,8 @@ export type IRState = {
 
 优先级调度采用单一真相：**只使用 `ir.priority(0-100)`**，并引入“间隔增长”避免材料长期高频出现。
 
+更多“排期 vs 今日推送（队列）”与调试记录见：`模块文档/记忆排期推送.md`。
+
 ### 1) 基础间隔（base interval）
 
 - Topic：优先级越高越频繁（约 `14d → 2d`）
@@ -66,7 +68,13 @@ export type IRState = {
 
 ### 2) 到期时间（due）
 
-- `calculateNextDue(cardType, priority, baseDate)` 会在基础间隔上加入 0–12h 抖动，减少同日堆积。
+- `due` 由 `baseDate + intervalDays` 计算得到（单位：天）。
+- 为减少“同日结块”，系统会在写入排期时对 `intervalDays` 做“分散抖动”（方案 1 / B 选择：抖动 intervalDays，而不是只抖动 due）：
+  - 新卡：只向后（避免大量新摘录同日堆积）
+    - Extract 新卡：除随机分散外，还会按“同一父 Topic、同一天创建的兄弟子块顺序”追加一个小的排队延迟（每张约 0.15~0.5 天），把一口气做出的 10~20 个摘录自然铺到 1~2 周内
+  - 非新卡：按比例 ± 抖动（Extract 更大、Topic 更小）
+  - 随机数使用“按天稳定”的 seed（同一天重复触发不会反复改变）
+- 实现位于：`src/srs/incrementalReadingDispersal.ts`，写入入口位于：`src/srs/incrementalReadingStorage.ts`
 
 ### 3) 已读后的间隔增长（intervalDays growth）
 
