--- a/模块文档/渐进阅读_优化路线.md
+++ b/模块文档/渐进阅读_优化路线.md
@@ -30,12 +30,14 @@
 ### 0.3 调度与队列（今天该推送谁）
 
 - 到期判定按“自然日 00:00”边界：`src/srs/incrementalReadingCollector.ts#collectIRCardsFromBlocks`
-- 下一次到期：由 `ir.priority(0-100)` + cardType 计算基础间隔，并加入少量抖动（`src/srs/incrementalReadingScheduler.ts`）
+- 下一次到期：基础间隔由 `ir.priority(0-100)` + cardType 计算（`src/srs/incrementalReadingScheduler.ts`），实际写回由 `src/srs/incrementalReadingStorage.ts` 统一负责（含分散抖动与新 Extract 的兄弟排队延迟）
 - 队列构建：`buildIRQueue`（`src/srs/incrementalReadingCollector.ts`）
   - Topic：按 `priority` 降序，其次 `due`，再按 `position`
   - Extract：按 `due` 升序，其次 `priority` 降序
   - `dailyLimit` 场景下：逾期 Extract 优先（先入队），其余再按 `topicQuotaPercent` 混排
   - 溢出推后（按钮触发）：`deferIROverflow` → `deferOverflowCards`（按优先级推后，并写回 `due/intervalDays/postponeCount/lastAction`；打开面板只展示，不自动改排期）
+
+补充：排期与推送的详细记录与调试清单见 `模块文档/记忆排期推送.md`。
 
 ### 0.4 会话动作（你对卡做了什么）
 
